syntax = "proto3";

package SensateIoT.Platform.MessageQueue.Proto;

option csharp_namespace = "SensateIoT.Platform.MessageQueue.Proto";
option go_package = "platform-queue/proto";


import "proto/message.proto";

message EnqueueResponse
{
  bytes ResponseId = 1;
  int32 Count = 2;
  string Message = 3;
}

message EnqueueRequest
{
  repeated SensateIoT.Platform.MessageQueue.Proto.Message Messages = 1;
}
